# django_carrent

./: .flake8  README.md  myproject.toml  pyproject.toml
app/: settings.py
